--- a/recipes/package.json
+++ b/recipes/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "buefy": "^0.6.5",
+    "bulma": "^0.6.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
