--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "sequelize": "^4.37.7",
+    "sqlite": "^2.9.1"
   },
   "devDependencies": {
     "eslint": "^4.6.0",
