--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.5",
+    "node-sass": "^4.9.0",
     "particles.js": "^2.0.0",
+    "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
