--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "^1.8.2",
     "sequelize": "^4.37.7",
     "sqlite": "^2.9.1"
