--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.8.2",
     "sequelize": "^4.37.7",
