--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-   "keywords": [],
+  "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
@@ -14,6 +14,7 @@
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "sequelize": "^4.37.7",
     "sqlite": "^2.9.1"
   },
