--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "particles.js": "^2.0.0",
     "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
