--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "express": "^4.15.4",
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.1",
