--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
