--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
     "sequelize": "^4.37.7",
     "sqlite": "^2.9.1"
   },
