--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -2,6 +2,9 @@
     "extends": "google",
     "parserOptions":
     {
-        "ecmaVersion": 6
+        "ecmaVersion": 2017
+    },
+    "rules": {
+        "new-cap": 0
     }
 }
